--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     <div class="collapse navbar-collapse" id="navmenu">
       <ul class="navbar-nav ms-auto">
         <li class="nav-item"><a class="nav-link active" href="index.html">Inicio</a></li>
-        <li class="nav-item"><a class="nav-link" href="productos.html">Productos</a></li>
+        <li class="nav-item"><a class="nav-link" href="Productos.html">Productos</a></li>
         <li class="nav-item"><a class="nav-link" href="cuidados.html">Cuidados</a></li>
         <li class="nav-item"><a class="nav-link" href="marcas.html">Marcas</a></li>
         <li class="nav-item"><a class="nav-link" href="contacto.html">Contacto</a></li>
@@ -100,7 +100,7 @@
       <div class="col-md-6 text-md-start">
         <h1 class="display-5 fw-bold" style="color: #d63384;">La Importancia de Usar Productos de Calidad</h1>
         <p class="lead text-muted">Tu cabello merece el mejor cuidado. Utilizar productos de buena calidad garantiza salud, brillo y fuerza desde la raíz hasta las puntas.</p>
-        <a href="productos.html" class="btn btn-custom mt-3">Descubre Nuestros Productos</a>
+        <a href="Productos.html" class="btn btn-custom mt-3">Descubre Nuestros Productos</a>
       </div>
     </div>
   </div>
