--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
             <div class="card-body text-center">
               <h5>Kit SOS Nutricion</h5>
               <p class="text-muted">RD$1,800</p>
-              <a href="#" class="btn btn-custom btn-sm">Comprar</a>
+              <a href="carrito.html" class="btn btn-custom btn-sm">Comprar</a>
             </div>
           </div>
         </div>
@@ -127,7 +127,7 @@
             <div class="card-body text-center">
               <h5>Infusion Water</h5>
               <p class="text-muted">RD$1,100</p>
-              <a href="#" class="btn btn-custom btn-sm">Comprar</a>
+              <a href="carrito.html" class="btn btn-custom btn-sm">Comprar</a>
             </div>
           </div>
         </div>
@@ -137,7 +137,7 @@
             <div class="card-body text-center">
               <h5>Gotero de Crecimiento</h5>
               <p class="text-muted">RD$875</p>
-              <a href="#" class="btn btn-custom btn-sm">Comprar</a>
+              <a href="carrito.html" class="btn btn-custom btn-sm">Comprar</a>
             </div>
           </div>
         </div>
